base/003_sts_postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  labels:
    app: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  serviceName: airflow
  template:
    metadata:
      labels:
        app: airflow
        tier: postgres
    spec:
      serviceAccount: airflow
      imagePullSecrets:
        - name: gcr-puller
      securityContext:
        runAsUser: 0
      containers:
      - name: postgres
        image: us.gcr.io/de-exam-kansinee/postgres:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgres/data
      restartPolicy: Always
      volumes:
      - emptyDir: {}
        name: data
