base/003_sts_scheduler.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: airflow-scheduler
  labels:
    app: airflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: airflow
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  serviceName: airflow
  template:
    metadata:
      labels:
        app: airflow
        tier: scheduler
    spec:
      serviceAccount: airflow
      imagePullSecrets:
      - name: gcr-puller
      securityContext:
        runAsUser: 0
      containers:
      - name: airflow-scheduler
        args: ["scheduler"]
        image: us.gcr.io/de-exam-kansinee/airflow:latest
        imagePullPolicy: Always
        volumeMounts:
          - name: service-account
            mountPath: /temp/service_account
          - name: airflow-cfg-volume
            mountPath: /temp
          - name: airflow-config-files
            mountPath: /temp/config
          - mountPath: /opt/airflow/logs
            name: airflow-logs
      volumes:
        - name: service-account
          secret:
            secretName: service-account
        - name: airflow-logs
          persistentVolumeClaim:
            claimName: airflow-logs
        - name: airflow-cfg-volume
          configMap:
            name: airflow-configmap
            items:
            - key: airflow.cfg
              path: airflow.cfg
        - name: airflow-config-files
          secret:
            secretName: airflow-config-files
