base/005_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    beta.cloud.google.com/backend-config: '{"default": "airflow-webserver-iap"}'  
  labels:
    app: airflow
    tier: webserver
  name: airflow-webserver-service
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: airflow
    tier: webserver
  sessionAffinity: None
  type: NodePort

# ---
#   kind: Service
#   apiVersion: v1
#   metadata:
#     name: airflow-scheduler-service
#     labels:
#       app: airflow
#       tier: scheduler
#   spec:
#     selector:
#       app: airflow
#       tier: scheduler
#     ports:
#       - protocol: TCP
#         name: scheduler
#         port: 8999
#         targetPort: 8999
#     type: NodePort

---
  kind: Service
  apiVersion: v1
  metadata:
    name: airflow-postgres-service
    labels:
      app: airflow
      tier: postgres
  spec:
    selector:
      app: airflow
      tier: postgres
    ports:
      - protocol: TCP
        name: postgres
        port: 5432
        targetPort: 5432
    type: NodePort
